swagger fixes & new routes
